--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="./style.css"> 
     <script src="./javascript.js" defer></script> 
   </head>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+  <body>
+    <main id="main">
+      <h1>Hello World!</h1>
+    </main>
+  </body>
 </html>
 
 
