Add skeletal form inputs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <main id="main">
-      <h1>Hello World!</h1>
+      <div id="hello-world">
+        <h1 class="hello-world">Hello World!</h1>
+      </div>
     </main>
   </body>
 </html>
